--- a/index.html
+++ b/index.html
@@ -867,17 +867,47 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="https://script.google.com/macros/s/AKfycbwUfVGmLxl80Da0AcHJpcM0alkFQRHDeAejidIucM6K-41UjXl2XCp5pc42uY_TdRDAPA/exec" method="POST" class="form" data-form>
-            <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
-              <input type="email" name="email" class="form-input" placeholder="Email address" required>
-            </div>
-            <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
-            <button class="form-btn" type="submit">
-              <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-            </button>
-          </form>          
+<form id="contactForm" class="form">
+  <div class="input-wrapper">
+    <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
+    <input type="email" name="email" class="form-input" placeholder="Email address" required>
+  </div>
+  <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
+  <button class="form-btn" type="submit">
+    <ion-icon name="paper-plane"></ion-icon>
+    <span>Send Message</span>
+  </button>
+</form>
+
+<script>
+  document.getElementById("contactForm").addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const form = e.target;
+    const formData = new FormData(form);
+    const data = Object.fromEntries(formData.entries());
+
+    try {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbzyhAyk_osF5UE9GG-vuxdpFSuIHpVOqcBzXf2c27LPdLSsSknqVFkG7bcishG8HgcH/exec", {
+        method: "POST",
+        body: JSON.stringify(data),
+        headers: { "Content-Type": "application/json" },
+      });
+
+      const result = await response.json();
+      if (result.status === "success") {
+        alert("Message sent successfully!");
+        form.reset();
+      } else {
+        alert("Failed to send message.");
+      }
+    } catch (error) {
+      alert("An error occurred. Please try again later.");
+      console.error(error);
+    }
+  });
+</script>
+         
 
         </section>
 
